--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native-screens": "~3.0.0",
     "react-native-swipe-list-view": "^3.2.7",
     "react-native-web": "~0.13.12",
-    "react-redux": "^7.2.3"
+    "react-redux": "^7.2.3",
+    "rfdc": "^1.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
